--- a/Road to Recovery/pages/viewPatient.html
+++ b/Road to Recovery/pages/viewPatient.html
@@ -93,6 +93,7 @@
             $('#skipPageButton').click(function () {
                 var pageNumber = parseInt($('#skipPageInput').val());
                 tbl.page(pageNumber - 1).draw('page');
+                $('#skipPageInput').val("")
             });
             refreshTable();
 
