--- a/Road to Recovery/pages/viewCandidates.html
+++ b/Road to Recovery/pages/viewCandidates.html
@@ -139,7 +139,7 @@
                                             <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
                                                 <a id="collapsed1_aTag" href="#collapse1" data-parent="#accordion" data-toggle="collapse" class="dropdown active open">
                                                     <span class="m-l-15">
-                                                        מסיעים רגילים
+                                                        מסיעים מתחילים
                                                     </span>
                                                 </a>
                                             </h4>
@@ -181,6 +181,50 @@
                                         </div>
                                     </div>
 
+
+                                    <div class="panel panel-primary">
+                                        <div class="panel-heading" id="col2">
+                                            <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
+                                                <a id="collapsed2_aTag" href="#collapse2" data-parent="#accordion" data-toggle="collapse">
+                                                    <span class="m-l-15">
+                                                        מסיעים רגילים
+                                                    </span>
+                                                </a>
+                                            </h4>
+                                        </div>
+                                        <div class="panel-collapse collapse" id="collapse2">
+                                            <div class="panel-body">
+                                                <table id="datatable-RegularDrivers" class="table table-striped table-bordered">
+                                                    <thead>
+                                                        <tr>
+                                                            <th class="middle" title="Time  الساعة">המתנדב.ת</th>
+                                                            <th class="middle" title="Origin  نقطة الانطلاق">טלפון</th>
+                                                            <th class="middle" title="Address عنوان">מקום מגורים</th>
+                                                            <th class="middle" title="Destination  نقطة الوصول">
+                                                                ההסעה האחרונה
+                                                                (ימים מאז)
+                                                            </th>
+                                                            <th class="middle" title="Patient  المريض">מס' הסעות בחודשיים האחרונים</th>
+                                                            <th class="middle" title="Driver  السائق">
+                                                                ההסעה הבאה
+                                                                (ימים)
+                                                            </th>
+                                                            <th class="middle" title="Status  حالة السفرية">שיחה אחרונה</th>
+                                                            <th class="middle" title="Last modified">
+                                                                ותק בעמותה
+                                                                (שנים)
+                                                            </th>
+                                                            <th class="middle" title="Match Score">
+                                                                ציון התאמה
+                                                            </th>
+                                                            <th class="middle" title="Actions  اعمال">פעולות</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody></tbody>
+                                                </table>
+                                            </div>
+                                        </div>
+                                    </div>
 
                                     <div class="panel panel-primary">
                                         <div class="panel-heading" id="col2">
@@ -229,48 +273,48 @@
 
 
                                     <!--<div class="panel panel-primary">
-                                        <div class="panel-heading" id="col2">
-                                            <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
-                                                <a href="#collapse3" data-parent="#accordion" data-toggle="collapse">
-                                                    <span class="m-l-15">
-                                                        מסיעים חדשים
-                                                    </span>
-                                                </a>
-                                            </h4>
-                                        </div>
-                                        <div class="panel-collapse collapse" id="collapse3">
-                                            <div class="panel-body">
-                                                <table id="datatable-newDrivers" class="table table-striped table-bordered">
-                                                    <thead>
-                                                        <tr>
-                                                            <th class="middle" title="Time  الساعة">המתנדב.ת</th>
-                                                            <th class="middle" title="Origin  نقطة الانطلاق">טלפון</th>
-                                                            <th class="middle" title="Address عنوان">מקום מגורים</th>
-                                                            <th class="middle" title="Destination  نقطة الوصول">
-                                                                ההסעה האחרונה
-                                                                (ימים מאז)
-                                                            </th>
-                                                            <th class="middle" title="Patient  المريض">מס' הסעות בחודשיים האחרונים</th>
-                                                            <th class="middle" title="Driver  السائق">
-                                                                ההסעה הבאה
-                                                                (ימים)
-                                                            </th>
-                                                            <th class="middle" title="Status  حالة السفرية">שיחה אחרונה</th>
-                                                            <th class="middle" title="Last modified">
-                                                                ותק בעמותה
-                                                                (שנים)
-                                                            </th>
-                                                            <th class="middle" title="Match Score">
-                                                                ציון התאמה
-                                                            </th>
-                                                            <th class="middle" title="Actions  اعمال">פעולות</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody></tbody>
-                                                </table>
-                                            </div>
-                                        </div>
-                                    </div>-->
+        <div class="panel-heading" id="col2">
+            <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
+                <a href="#collapse3" data-parent="#accordion" data-toggle="collapse">
+                    <span class="m-l-15">
+                        מסיעים חדשים
+                    </span>
+                </a>
+            </h4>
+        </div>
+        <div class="panel-collapse collapse" id="collapse3">
+            <div class="panel-body">
+                <table id="datatable-newDrivers" class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th class="middle" title="Time  الساعة">המתנדב.ת</th>
+                            <th class="middle" title="Origin  نقطة الانطلاق">טלפון</th>
+                            <th class="middle" title="Address عنوان">מקום מגורים</th>
+                            <th class="middle" title="Destination  نقطة الوصول">
+                                ההסעה האחרונה
+                                (ימים מאז)
+                            </th>
+                            <th class="middle" title="Patient  المريض">מס' הסעות בחודשיים האחרונים</th>
+                            <th class="middle" title="Driver  السائق">
+                                ההסעה הבאה
+                                (ימים)
+                            </th>
+                            <th class="middle" title="Status  حالة السفرية">שיחה אחרונה</th>
+                            <th class="middle" title="Last modified">
+                                ותק בעמותה
+                                (שנים)
+                            </th>
+                            <th class="middle" title="Match Score">
+                                ציון התאמה
+                            </th>
+                            <th class="middle" title="Actions  اعمال">פעולות</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+        </div>
+    </div>-->
 
 
 
