--- a/Road to Recovery/pages/viewCandidates.html
+++ b/Road to Recovery/pages/viewCandidates.html
@@ -130,7 +130,7 @@
                             <div class="card-box table-responsive">
                                 <div class="row">
                                     <div class="col-sm-12 text-right">
-                                        <button data-placement="right" data-toggle="tooltip" title="בחינת הפרמטרים השונים" type="button" id="viewCandidatesDetailedCharactaristics" onclick="viewCharactaristics()" class="btn btn-success waves-effect w-md waves-light m-b-5"><span class="glyphicon glyphicon-plus-sign m-r-5"></span>צפה בציוני האלגוריתם</button>
+                                        <!--<button data-placement="right" data-toggle="tooltip" title="בחינת הפרמטרים השונים" type="button" id="viewCandidatesDetailedCharactaristics" onclick="viewCharactaristics()" class="btn btn-success waves-effect w-md waves-light m-b-5"><span class="glyphicon glyphicon-plus-sign m-r-5"></span>צפה בציוני האלגוריתם</button>-->
                                     </div>
                                 </div>
                                 <div id="accordion" class="panel-group">
@@ -185,14 +185,14 @@
                                     <div class="panel panel-primary">
                                         <div class="panel-heading" id="col2">
                                             <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
-                                                <a id="collapsed2_aTag" href="#collapse2" data-parent="#accordion" data-toggle="collapse">
+                                                <a id="collapsed2_aTag" href="#collapse3" data-parent="#accordion" data-toggle="collapse">
                                                     <span class="m-l-15">
                                                         מסיעים רגילים
                                                     </span>
                                                 </a>
                                             </h4>
                                         </div>
-                                        <div class="panel-collapse collapse" id="collapse2">
+                                        <div class="panel-collapse collapse" id="collapse3">
                                             <div class="panel-body">
                                                 <table id="datatable-RegularDrivers" class="table table-striped table-bordered">
                                                     <thead>
@@ -229,7 +229,7 @@
                                     <div class="panel panel-primary">
                                         <div class="panel-heading" id="col2">
                                             <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
-                                                <a id="collapsed2_aTag" href="#collapse2" data-parent="#accordion" data-toggle="collapse">
+                                                <a id="collapsed3_aTag" href="#collapse2" data-parent="#accordion" data-toggle="collapse">
                                                     <span class="m-l-15">
                                                         סופר מסיעים
                                                     </span>
