--- a/Road to Recovery/pages/locations map.html
+++ b/Road to Recovery/pages/locations map.html
@@ -162,6 +162,9 @@
         function placeMarkers(locations) {
            
             for (k in locations) {
+                //if (locations[k].Type!="מחסום") {
+                //    continue;
+                //}
                 let lat = locations[k].Lat;
                 let lng = locations[k].Lng;
                 if (lat != -1) {
@@ -312,7 +315,7 @@
 
         }
 
-        function drawPoint(loc,name) {
+        function drawPoint(loc, name) {
             let lat = loc.Coord.Latitude;
             let lng = loc.Coord.Longitude;
             var marker = new google.maps.Marker({
