--- a/Road to Recovery/pages/viewCandidates.html
+++ b/Road to Recovery/pages/viewCandidates.html
@@ -142,7 +142,7 @@
                                             <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
                                                 <a id="collapsed1_aTag" href="#collapse1" data-parent="#accordion" data-toggle="collapse" class="dropdown active open">
                                                     <span class="m-l-15">
-                                                        מסיעים מתחילים
+                                                        מסיעים חדשים בעמותה
                                                     </span>
                                                 </a>
                                             </h4>
@@ -190,7 +190,7 @@
                                             <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
                                                 <a id="collapsed2_aTag" href="#collapse3" data-parent="#accordion" data-toggle="collapse">
                                                     <span class="m-l-15">
-                                                        מסיעים רגילים
+                                                        מסיעים פעילים
                                                     </span>
                                                 </a>
                                             </h4>
