--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -3179,7 +3179,7 @@
                                             </div>
                                             <div class="col-sm-6" id="coorDiv">
                                                 <div class="form-group">
-                                                    <label class="col-sm-2 control-label">רכז</label>
+                                                    <label class="col-sm-2 control-label">מתאם</label>
                                                     <div class="col-sm-6" id="selectCoordinator">
                                                         <input type="text" id="coordinator" name="coordinator" class="form-control">
                                                     </div>
