--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -95,6 +95,12 @@
             background-color: #FFE684;
         }
 
+        ::-webkit-calendar-picker-indicator {
+            width: 24px;
+            height: 24px;
+            cursor: pointer;
+        }
+
         .duplicateDisplay {
             display: none;
         }
